@startuml

!includeurl https://raw.githubusercontent.com/skleanthous/C4-PlantumlSkin/master/build/output/general/notes.puml

class Client

Client *--> "1" ClientId
Client *--> "1" ClientState

class ClientId {
    UUID id
}

class ClientState {
    name: String
    age: Int
    activated: Boolean
}

interface ClientRepository {
    +save(Client.State): Mono<Client>
    +save(ClientId, Client.State): Mono<Client>
    +save(Client): Mono<Client>
    +findOne(ClientId, activatedOnly: Boolean = true): Mono<Client>
    +findByName(name: String, strict: Boolean = false, activatedOnly: Boolean = true): Flux<Client>
    +findAll(activatedOnly: Boolean = true): Flux<Client>
    +remove(Client): Mono<Client>
}

ClientRepository --> "read and writes" Client

@enduml
